# statistics_workshop

./: NOTES.md  README.md  index.html  notebook.ipynb  pyproject.toml  requirements.txt  style.mplstyle
.github/workflows/: publish.yml  python-package.yml
workshop_01/: index.html  notebook.ipynb
workshop_02/: delta_chi_square.ipynb  notebook.ipynb
workshops/: README.md
workshops/statistics/: notebook.ipynb
