[tool.poetry]
name = "stats_lesson"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
jupyter = "^1.0.0"
numpy = "^1.20.2"
matplotlib = "^3.4.0"
rise = "^5.7.1"
ipykernel = "^5.5.0"
pandas = "^1.2.3"
notebook = "^6.3.0"
scipy = "^1.6.2"
jupyter-contrib-nbextensions = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
